crates/toml_edit/tests/snapshots/invalid/string/basic-multiline-out-of-range-unicode-escape-01.stderr
TOML parse error at line 1, column 10
  |
1 | a = """\UFFFFFFFF"""
  |          ^
invalid value, expected unicode hexadecimal value
